lucy pic, linewidth, mission statement link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-coffee">About Equitea</span></a></li>
-								<li><a href="#missionstatement" id="mission-link"><span class="icon solid fa-book">Our Mission Statement</span></a></li>
+								<li><a href="#mission" id="mission-link"><span class="icon solid fa-book">Our Mission Statement</span></a></li>
 								<li><a href="#schedule" id="schedule-link"><span class="icon solid fa-calendar-alt">Schedule</span></a></li>
 								<li><a href="#committee" id="committee-link"><span class="icon solid fa-users">Committee</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
@@ -42,10 +42,10 @@
 
 							<h3 align="center"><br><b style="color: #dcc8c3; text-align: center;">Our Ground Rules</b></h5>
 
-							<p style="line-height:90%">We follow the <a href="https://aas.org/policies/ethics" style="color: #d5c1bc">AAS Code of Ethics</a> in our discussions, with
+							<p style="line-height:95%">We follow the <a href="https://aas.org/policies/ethics" style="color: #d5c1bc">AAS Code of Ethics</a> in our discussions, with
 								our own guidance below. Anyone who does not adhere to this code of conduct will be barred from future meetings.</p>
 							
-								<ol align="center" style="line-height:90%">
+								<ol align="center" style="line-height:95%">
 								<li><b style="color: #d5c1bc">This is a space for everyone to learn and grow.</b></li>
 									<ul>
 										<li><em>Remember, no-one is perfect, If you make a mistake, remember to apologise and learn from it. 
@@ -74,7 +74,7 @@
 									</ul>
 							</ol>
 
-							<p style="line-height: 90%;">These points where inspired by similar codes of conduct from <a href="https://warwick.ac.uk/fac/sci/physics/research/astro/seminars/equitea/codeofconduct/" style="color: #d5c1bc">
+							<p style="line-height: 95%;">These points where inspired by similar codes of conduct from <a href="https://warwick.ac.uk/fac/sci/physics/research/astro/seminars/equitea/codeofconduct/" style="color: #d5c1bc">
 								the University of Warwick Equitea</a> and <a href="https://sites.google.com/umich.edu/astro-dei/home?authuser=0" style="color: #d5c1bc">the University of Michigan Equitea</a>.</p>
 							</font>
 						</div>
@@ -212,7 +212,7 @@
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
 								</tr>
 								<tr style="text-align: left; border-bottom: 1px solid #e6eae9;">
-									<th style="background-color: #FFFFFF; vertical-align: middle; color: black"><img src="images/ld.jpg" width="150" height="170"></th>
+									<th style="background-color: #FFFFFF; vertical-align: middle; color: black"><img src="images/lsd.jpg" width="150" height="150"></th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Lucy Dolan<br>(she/her)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Speaker Liaison</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">ldolan05 [at] qub.ac.uk</th>
