edit image sizes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/teapot.png" alt="" /></span>
+							<span class="image avatar48"><img src="images/teapot.png" alt="" height="50" width="50"></span>
 							<h1 id="title">ARC Equitea</h1>
 							<p>Equity, Diversity, and Inclusion</p>
 						</div>
@@ -126,7 +126,7 @@
 							</header>
 							
 							<div class="imgtxt">
-								<div class="img"><img src="images/teapot.png" alt="" ></div>
+								<div class="img"><img src="images/teapot.png" alt="" height="50" width="50"></div>
 								<div class="text"><p>Our mission at Equitea is to champion and foster equality, diversity and inclusivity within ARC. 
 									In our sessions, we aim to create safe spaces that foster dialogue, understanding and empathy while encouraging 
 									participants to actively listen, learn and engage in meaningful conversations. We are dedicated to creating a 
