pad title a bit

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/teapot.png" alt="" height="50" width="70"></span>
-							<h1 id="title">ARC Equitea</h1>
-							<p>Equity, Diversity, and Inclusion</p>
+							<h1 id="title" style="margin-left: 5px">ARC Equitea</h1>
+							<p style="margin-left: 5px">Equity, Diversity, and Inclusion</p>
 						</div>
 
 					<!-- Nav -->
