edit text wrapping

--- a/index.html
+++ b/index.html
@@ -126,20 +126,20 @@
 							</header>
 							
 							<div class="imgtxt">
-								<div class="img"><img src="images/teapot.png" alt="" height="500" width="600"></div>
-								<div class="text"><p>Our mission at Equitea is to champion and foster equality, diversity and inclusivity within ARC. 
+								<div class="img"><img src="images/teapot.png" alt="" height="400" width="500"></div>
+								<div class="text">Our mission at Equitea is to champion and foster equality, diversity and inclusivity within ARC. 
 									In our sessions, we aim to create safe spaces that foster dialogue, understanding and empathy while encouraging 
 									participants to actively listen, learn and engage in meaningful conversations. We are dedicated to creating a 
-									department where every member is respected, valued and empowered to achieve their potential.</p></div>
+									department where every member is respected, valued and empowered to achieve their potential.</div>
 							</div>
 
 							<!-- <table style="width: 1600px; max-width: 100%;">
 								<tr>
-									<th style="vertical-align: middle; background-color: #eaeded; height: 300px; width: 300px;"><img src="images/avatar.jpg" alt="" /></th>
-									<th style="vertical-align: left; background-color: #eaeded; color: black">Our mission at Equitea is to champion and foster equality, 
+									<th style="vertical-align: middle; background-color: #eaeded; height: 300px; width: 300px;"><img src="images/teapot.jpg" alt="" ></th>
+									<th style="vertical-align: left; background-color: #eaeded; color: black"><p>Our mission at Equitea is to champion and foster equality, 
 										diversity and inclusivity within ARC. In our sessions, we aim to create safe spaces that foster dialogue, understanding 
 										and empathy while encouraging participants to actively listen, learn and engage in meaningful conversations. We are 
-										dedicated to creating a department where every member is respected, valued and empowered to achieve their potential.</th>
+										dedicated to creating a department where every member is respected, valued and empowered to achieve their potential.</p></th>
 								</tr>
 							</table> -->
 
