--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<p style="margin-left: 5px">Equity, Diversity, and Inclusion</p>
 						</div>
 
-					<hr>
+					<hr style="margin: 10px; color: #4a231b">
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -38,7 +38,7 @@
 							</ul>
 						</nav>
 
-					<hr>
+					<hr style="margin: 10px; color: #4a231b">
 
 					<!-- Ground Rules -->
 						<div id="groundrules" align='left' style="color: #d0a99f; float: right; margin-left: 10px; margin-right: 10px;">
