--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 								<h2 style="background-color: #ad4d38; color: white;">Mission Statement</h2>
 							</header>
 							
-							<div class="imgtxt">
+							<div class="imgtxt" width="1600px">
 								<div class="img"><img src="images/teapot.png" alt="" height="400" width="500"></div>
 								<div class="text">Our mission at Equitea is to champion and foster equality, diversity and inclusivity within ARC. 
 									In our sessions, we aim to create safe spaces that foster dialogue, understanding and empathy while encouraging 
