--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 							<table style="width: 1200px; max-width: 100%; color: black">
 								<tr>
-									<th style="background-color: #ad4d38; text-align: left;"> </th>
+									<th style="background-color: #ad4d38; text-align: left;">&nbsp;</th>
 									<th style="background-color: #ad4d38; text-align: left;">Name</th>
 									<th style="background-color: #ad4d38; text-align: left;">Role</th>
 									<th style="background-color: #ad4d38; text-align: left;">Email</th>
@@ -213,35 +213,35 @@
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Steph Merritt<br>(they/them)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Treasurer</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">s.merritt [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">&nbsp;</th>
 								</tr>
 								<tr style="text-align: left; border-bottom: 1px solid #e6eae9;">
 									<th style="background-color: #FFFFFF; vertical-align: middle; color: black"><img src="images/lsd.jpg" width="150" height="150"></th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Lucy Dolan<br>(she/her)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Speaker Liaison</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">ldolan05 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">&nbsp;</th>
 								</tr>
 								<tr style="text-align: left; border-bottom: 1px solid #e6eae9;">
 									<th style="background-color: #FFFFFF; vertical-align: middle; color: black"><img src="images/jmm.jpg" width="150" height="150"></th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Joseph Murtagh<br>(he/him)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Digital Communications</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">jmurtagh05 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">&nbsp;</th>
 								</tr>
 								<tr style="text-align: left; border-bottom: 1px solid #e6eae9;">
 									<th style="background-color: #FFFFFF; vertical-align: middle; color: black"><img src="images/dj.jpg" width="150" height="150"></th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">David Jackson<br>(he/him)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Committee Member<br>(PGR)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">djackson823 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">&nbsp;</th>
 								</tr>
 								<tr style="text-align: left; border-bottom: 1px solid #e6eae9;">
 									<th style="background-color: #FFFFFF; vertical-align: middle; color: black"></th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Mandy Hewitt<br>(she/her)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Committee Member<br>(PGR)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">hhewitt01 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">&nbsp;</th>
 								</tr>
 							</table>
 						</div>
