--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<p style="line-height:98%">We follow the <a href="https://aas.org/policies/ethics" style="color: #d5c1bc">AAS Code of Ethics</a> in our discussions, with
 								our own guidance below. Anyone who does not adhere to this code of conduct will be barred from future meetings.</p>
 							
-								<ol align="center" style="line-height:95%">
+								<ol align="left" style="line-height:95%">
 								<li><b style="color: #d5c1bc">This is a space for everyone to learn and grow.</b></li>
 									<ul>
 										<li><em>Remember, no-one is perfect, If you make a mistake, remember to apologise and learn from it. 
