--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 								<h2 style="background-color: #ad4d38; color: white;">Mission Statement</h2>
 							</header>
 							
-							<div class="imgtxt" width="1600px">
+							<div class="imgtxt" width="2000px">
 								<div class="img"><img src="images/teapot.png" alt="" height="400" width="500"></div>
-								<div class="text">Our mission at Equitea is to champion and foster equality, diversity and inclusivity within ARC. 
+								<div class="text" white-space: no-wrap>Our mission at Equitea is to champion and foster equality, diversity and inclusivity within ARC. 
 									In our sessions, we aim to create safe spaces that foster dialogue, understanding and empathy while encouraging 
 									participants to actively listen, learn and engage in meaningful conversations. We are dedicated to creating a 
 									department where every member is respected, valued and empowered to achieve their potential.</div>
