--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 									<th style="background-color: #ad4d38; text-align: left; color: white">Recommended Reading</th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left; color: black">20/07/23 3-4pm</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">20/07/23<br>3-4pm</th>
 									<th style="background-color: #FFFFFF; text-align: left; color: black">Accessibility in conferences</th>
 									<th style="background-color: #FFFFFF; text-align: left; color: black">Sean O'Brien</th>
 									<th style="background-color: #FFFFFF; text-align: left; color: black"> - </th>
