--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 							<p>Previous meetings, including minutes and resources, can be found here!</p>
 
-							<table style="width: 1600px; max-width: 100%">
+							<table style="width: 1200px; max-width: 1200px">
 								<tr>
 									<th style="background-color: #ad4d38; text-align: left; color: white">Date & Time</th>
 									<th style="background-color: #ad4d38; text-align: left; color: white">Discussion Topic</th>
